fix: wrapping and padding of secondary identities

--- a/src/app/idcard/idcard.component.css
+++ b/src/app/idcard/idcard.component.css
@@ -110,3 +110,18 @@ mat-card-title{
 .mat-card.mat-card-scrollable mat-card-title {
   display: block;
 }
+
+/*
+Removes annoying 16px padding on the sides of each mat-list-item
+*/
+::ng-deep .mat-list-base .mat-list-item .mat-list-item-content,
+::ng-deep .mat-list-base .mat-list-option .mat-list-item-content {
+  padding: 0 !important;
+}
+
+/*
+lets user hover over the secodary identites
+*/
+.second-id:hover {
+  background-color: lightgray;
+}
